<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:clickable="true"
    tools:context="ca.ualberta.smartbroom.MyInfoActivity$MyOptionsFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:orientation="vertical" >


        <LinearLayout
            android:id="@+id/activityLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:id="@+id/textView1"
                android:clickable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:textSize="@dimen/text_normal"
                android:text="@string/activity" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:clickable="false">

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:src="@drawable/menu50" />

                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:clickable="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/list_item_spacing_left"
                    android:layout_marginTop="@dimen/list_item_spacing_top"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textViewNumActivities"
                        android:clickable="false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_large"
                        android:text="@string/default_num_tracked" />

                    <TextView
                        android:id="@+id/textViewTracked"
                        android:clickable="false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tracked" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"
                android:clickable="false"
                android:layout_marginTop="@dimen/list_item_spacing_top"
                android:layout_marginBottom="@dimen/list_item_spacing_bottom" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:textSize="@dimen/text_normal"
                android:text="@string/best_game_sweeping" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_large"
                        android:text="@string/default_best" />
                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_month" />
                </LinearLayout>

                <View
                    android:layout_width="2dp"
                    android:layout_height="fill_parent"
                    android:background="#c0c0c0"
                    android:layout_marginLeft="@dimen/list_item_spacing_left"
                    android:layout_marginRight="@dimen/list_item_spacing_right"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_large"
                        android:text="@string/default_best" />
                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_month" />
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"
                android:layout_marginTop="@dimen/list_item_spacing_top"
                android:layout_marginBottom="@dimen/list_item_spacing_bottom" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:textSize="@dimen/text_normal"
                android:text="@string/best_game_pressure" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_large"
                        android:text="@string/default_best" />
                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_month" />
                </LinearLayout>

                <View
                    android:layout_width="2dp"
                    android:layout_height="fill_parent"
                    android:background="#c0c0c0"
                    android:layout_marginLeft="@dimen/list_item_spacing_left"
                    android:layout_marginRight="@dimen/list_item_spacing_right"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_large"
                        android:text="@string/default_best" />
                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_month" />
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"
                android:layout_marginTop="@dimen/list_item_spacing_top"
                android:layout_marginBottom="@dimen/list_item_spacing_bottom" />
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <com.jjoe64.graphview.helper.GraphViewXML
                android:id="@+id/frequencyGraph"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                app:seriesData="0=5;2=5;3=0;4=2"
                app:seriesType="bar"
                app:seriesColor="#ee0000"
                android:layout_weight="1" />

            <com.jjoe64.graphview.helper.GraphViewXML
                android:id="@+id/pressureGraph"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                app:seriesData="0=5;2=5;3=0;4=2"
                app:seriesType="bar"
                app:seriesColor="#ee0000"
                android:layout_weight="1" />
        </LinearLayout>


    </LinearLayout>



</RelativeLayout>